--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,9 @@ services:
     build: ./bot
     volumes:
       - ./bot:/usr/src/bot:rw
+      - ./lib:/usr/src/bot/lib:ro
+      - ./model:/usr/src/bot/model:ro
+      - ./image:/usr/src/bot/image:rw
     environment:
       - TOKEN=${TOKEN}
       - GUILDS=${GUILDS}
@@ -19,19 +22,55 @@ services:
       - db
     command: ["python3", "main.py"]
     restart: always
+    networks:
+      - default
 
   db:
     image: mariadb:10.9.4-jammy
     volumes:
       - bankandb:/var/lib/mysql:rw
     ports:
-      - 5000:3306
+      - 5002:3306
     environment:
       - MARIADB_ROOT_PASSWORD=${MARIADB_ROOT_PASSWORD} 
       - MARIADB_PASSWORD=${MARIADB_PASSWORD} 
       - MARIADB_USER=${MARIADB_USER}
       - MARIADB_DATABASE=${MARIADB_DATABASE}
+      - HOST_URL=${HOST_URL}
     command: >
       --character-set-server=utf8mb4
       --collation-server=utf8mb4_general_ci
     restart: always
+    networks:
+      - default
+
+
+  api:
+    build: ./api
+    volumes:
+      - ./api:/usr/src/api:rw
+      - ./lib:/usr/src/api/lib:ro
+      - ./model:/usr/src/api/model:ro
+      - ./image:/usr/src/api/image:rw
+    environment:
+      - TOKEN=${TOKEN}
+      - GUILDS=${GUILDS}
+      - MARIADB_PASSWORD=${MARIADB_PASSWORD} 
+      - MARIADB_USER=${MARIADB_USER}
+      - MARIADB_DATABASE=${MARIADB_DATABASE}
+      - HOST_URL=${HOST_URL}
+    tty: true
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
+    restart: always
+    depends_on:
+      - db
+    networks:
+      - external_network
+      - default
+
+
+networks:
+  external_network:
+    external:
+      name: ${NETWORK}
+  default:
